--- a/www/css/pages_style.css
+++ b/www/css/pages_style.css
@@ -6,6 +6,7 @@
   --clr-base-blue: rgb(146, 206, 208, 1);
   --clr-base-green: rgb(72, 150, 25, 1);
   --clr-base-purple: rgba(13, 4, 42, 1);
+  --clr-white: rgba(255, 255, 255, 1);
 
   --clr-opaque-blue: rgb(146, 206, 208, .8);
   --clr-opaque-green: rgb(72, 150, 25, 0.8);
@@ -119,43 +120,14 @@ ol[role="list"] {
 /* Title page styling*/
 
 .titlepage-box {
-  height: 100vh;
+  height: 80vh;
   background-image: linear-gradient(100deg, var(--clr-base-purple), var(--clr-base-blue));
   box-shadow: 3px 7px 1rem rgba(0, 0, 0, 0.4);
-  margin-bottom: 0;
-}
-
-.primary-header {
-  grid-area: header;
-  position: relative;
-  text-align: center; 
-  /*height: 5.9vw;*/
-  margin: 30px 0 0 0;
   display: grid;
-  grid-template-columns: 31% 3% 33% 33%;
-  grid-template-rows: 8% 92%;
-  grid-template-areas:
-    "logo . header1 . ."
-    "title title title title title"
-}
-
-.cs-logo {
-  grid-area: logo;
-  background-color: white;
-  border-radius: 0.5rem;
-  padding: 1px 1px 1px 1px;
-  width: 12vw;
-  min-width: 100px;
-  justify-self: right;
-  box-shadow: 3px 3px 1rem rgba(0, 0, 0, 0.4);
-}
-
-.headerone {
-  grid-area: header1;
-  font-size: 16px;
-  color: var(--clr-text-light);
-  margin: auto;
-  font-weight: 600;
+  grid-template-columns: 60% 40%;
+  grid-template-rows: auto; /* Ensure grid rows adjust dynamically */
+  grid-template-areas: 
+    "title gall";
 }
 
 .title-box {
@@ -167,15 +139,34 @@ ol[role="list"] {
 }
 
 .titlepage-title {
-  font-size: 70px;
+  font-size: 60px;
   font-weight: 100;
-  margin-top: 70px;
+  margin-top: 20px;
   line-height: 1;
 }
 
 .titlepage-subtitle {
   font-size: 20px;
   font-weight: 400;
+}
+
+.image-stack {
+  grid-area: gall;
+  display: grid;
+  position: relative;
+  padding: 0 30px;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(16, 6.25vh);
+}
+
+.image-logo {
+  grid-row: 3;
+  grid-column: 2 / span 8;
+  z-index: 1;
+  width: 100%;
+  display: block;
+  border: 8px solid white;
+  box-shadow: 3px 3px 1rem rgba(0, 0, 0, 0.4), -3px -3px 1rem rgba(0, 0, 0, 0.4);
 }
 
 /* Body Section */
@@ -282,24 +273,19 @@ ol[role="list"] {
   }
   
   .titlepage-box {
-    min-height: 100vh;
-    height: auto;
-    padding-bottom: 30px;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "title"
+            "image"
+            "content";
+        gap: 20px;
+    }
+    
+  .titlepage-title {
+    font-size: 2rem;
+    text-align: center;
   }
-  
-  .primary-header {
-    margin: 15px;
-    grid-template-columns: 33% 33% 33%;
-    grid-template-rows: 16% 84%;
-    grid-template-areas:
-        "logo  header1 header 1"
-        "title title title";
-  }
-  
-  .cs-logo {
-    justify-self: center;
-  }
-  
+    
   .title-box {
     padding: 0;
   }
